# haskell-sandbox

./: .gitignore  README.md
basics/: README.md  basic.hs
bin-packing-problem-poc/: CHANGELOG.md  README.md  bin-packing-problem-poc.cabal
bin-packing-problem-poc/app/: Main.hs  OnlineSolution.hs
bin-packing-problem-poc/src/: OnlineSolution.hs
bin-packing-problem-poc/tests/: OnlineSolutionTests.hs
hello-world-poc/: README.md  hello.hs
repl-poc/: README.md
time-execution-poc/: README.md  main.hs
unit-test-poc/: CHANGELOG.md  LICENSE  README.md  unit-test-poc.cabal
unit-test-poc/tests/: BasicSumTests.hs
