cabal-version:      3.0
name:               bin-packing-problem-poc
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Gabriel Passos
maintainer:         gabrielsantos45725@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library online-solution-lib
    exposed-modules:  OnlineSolution
    hs-source-dirs:   src
    build-depends:    base ^>=4.17
    default-language: Haskell2010

executable bin-packing-problem-poc
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite unit-tests
    type:             exitcode-stdio-1.0
    main-is:          OnlineSolutionTests.hs
    build-depends:    base ^>=4.17, HUnit ^>=1.6, online-solution-lib
    hs-source-dirs:   tests
    default-language: Haskell2010
